# Barbie-scanner

./: .gitignore  .platform.app.yaml  README.md  artists.json  main.py  pyproject.toml  requirements.txt  tuna_scraper.py
 .github/workflows/: deploy-barbie.yaml
.github/workflows/: deploy_barbie.yml
.platform/: services.yaml
lambda_scraper/: Dockerfile
lambda_scraper/app/: main.py
lambda_scraper/play/app/: app.py
