[project]
name = "barbie-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-utils>=0.8.0",
    "google-api-python-client>=2.170.0",
    "google-auth-oauthlib>=1.2.2",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.34.3",
]
