[tool.poetry]
name = "barbie-scanner"
version = "0.1.0"
description = "Barbie show scraper for monitoring specific artists' performances"
authors = ["Or Basker"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.12"
fastapi-utils = "^0.8.0"
google-api-python-client = "^2.170.0"
google-auth-oauthlib = "^1.2.2"
playwright = "^1.52.0"
python-dotenv = "^1.1.0"
typing-inspect = "^0.9.0"
uvicorn = "^0.34.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
